fix experiences size on mobile

--- a/packages/scss/src/atoms/Image5050.scss
+++ b/packages/scss/src/atoms/Image5050.scss
@@ -6,7 +6,7 @@
   @include phone() {
     max-width: 100%;
     img {
-      width: 60%;
+      width: 50%;
     }
   }
   @include tablet() {
